[project]
name = "data-dragon-ingestion"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Palma",email = "gabriel.palma.oliveira@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "data_dragon_ingestion", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)"
]
